	* Smudge tool now works about two times faster
	* 12 new blend modes added
	* Ctrl+Double click selects average colour underneath brush square or selection marquee
	* "Convert to indexed" using current palette now truncates the palette only if requested
	* "Convert to indexed" PNN and Wu quantizers now have diameter based weighting option
	* Canvas, view and palette window now do not lose mouse button release events in GTK+1
	* Makefiles now honor DESTDIR
	* Shift+Enter while pasting swaps clipboard with canvas (see handbook section 4.8)
	* BUGFIX - Polygon line selection now clearer in Windows version
	* BUGFIX - Occasional redraw glitches in paste and gradient previews eliminated
	* BUGFIX - "Remove All Layers" with layers window closed doesn't cause crash
	* BUGFIX - Pasting in tint mode into indexed images' utility channels now works correctly
	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel
	* BUGFIX - Alt+S key now opens Selection menu as it should
	* BUGFIX - Directory for animation frames is created relative to layers file, as it should be
	* BUGFIX - Saving animation frames in PNG format doesn't cause crash
	* BUGFIX - When pasting to a new layer it is created untitled, as it should

3.21	2008-6-8

	* Russian translation added by Sergey Irupin
	* Spanish translation updated by Antonio Sanchez Leon
	* Galician translation added by Miguel Anxo Bouzada
	* Use 'xdg-open' if available to open HTML help in default browser on Linux
	* Relaxed sanity checking in XPM loader to accept files with malformed headers
	* "Exact Conversion" option added to Palette->Create Quantized
	* Counting used colours now about twice as fast
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - Canvas, view and palette area borders now can't be messed up by theme engines
	* BUGFIX - Persistent rectangle selection now doesn't steal arrow keys from gradient placement tool